--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
         <a href="https://instagram.com.br">&commat;instagram</a>
     </aside>
     <main>
-        <div>Twitter</div>
-        <div>Twitch</div>
-        <div>Github</div>
-        <div>Linkedin</div>
+        <div><a href="https://twitter.com.br" target="_blank">Twitter</a> </div>
+        <div><a href="https://twitch.com" target="_blank">Twitch</a></div>
+        <div><a href="https://github.com" target="_blank">Github</a></div>
+        <div><a href="https://linkedin.com.br"  target="_blank">Linkedin</a></div>
     </main>
     <footer>
         <img src="https://raw.githubusercontent.com/1felipeaac/rocketseat/main/assets/twitter.svg" alt="Twitter">
